--- a/project/java/translations/values-fi/strings.xml
+++ b/project/java/translations/values-fi/strings.xml
@@ -105,4 +105,6 @@
 <string name="storage_commandline">Määritä komentoriviparametrit</string>
 <string name="calibrate_touchscreen">Kalibroi kosketusnäyttö</string>
 <string name="calibrate_touchscreen_touch">Touch kaikki neljä reunaa näytön, paina Valikko, kun olet valmis</string>
+<string name="screenkb_custom_layout">Mukauta-ruudun näppäimistö</string>
+<string name="screenkb_custom_layout_help">Työnnä näytön lisätä painikkeen, paina Menu kumota viimeksi painike</string>
 </resources>
