--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -108,4 +108,6 @@
 <string name="storage_commandline">Spécifier les paramètres de ligne de commande</string>
 <string name="calibrate_touchscreen">Calibrer écran tactile</string>
 <string name="calibrate_touchscreen_touch">Touchez les quatre bords de l\u0026#39;écran, appuyez sur MENU lorsque vous avez terminé</string>
+<string name="screenkb_custom_layout">Personnalisation de la présentation du clavier à l\u0026#39;écran</string>
+<string name="screenkb_custom_layout_help">Faites glisser l\u0026#39;écran pour ajouter le bouton, appuyez sur Menu pour annuler le dernier bouton</string>
 </resources>
