--- a/todo.txt
+++ b/todo.txt
@@ -7,15 +7,11 @@ I'm not planning any more games to port.
 Bugs to fix
 ===========
 
-- Possibility to create custom key layout for on-screen keyboard.
-
-- Add an option for button images size.
-
 - Running OpenGL SwapBuffers in a separate thread - huge speed improvement expected.
 
 - Show/hide screen controls with longpress on Text Edit button.
 
-- Right click by longpress.
+- Right click by longpress, assign any HW key to do left/right click.
 
 - Calling SDL_SetVideoMode() with SDL 1.3 several times makes it crash.
 
