Option to assign mouse click to any HW key

--- a/project/java/translations/values-de/strings.xml
+++ b/project/java/translations/values-de/strings.xml
@@ -107,4 +107,5 @@
 <string name="calibrate_touchscreen_touch">Touch allen vier Rändern des Bildschirms, drücken Sie Menü, wenn Sie fertig</string>
 <string name="screenkb_custom_layout">Passen Sie auf dem Bildschirm Tastatur-Layout</string>
 <string name="screenkb_custom_layout_help">Slide-Bildschirm hinzufügen Taste, drücken Sie Menü zum letzten Knopf rückgängig machen</string>
+<string name="rightclick_key">Physikalische Schlüssel</string>
 </resources>
