--- a/project/java/translations/values-uk/strings.xml
+++ b/project/java/translations/values-uk/strings.xml
@@ -100,4 +100,5 @@
 <string name="calibrate_touchscreen_touch">Доторкнiться до всіх чотирьох країв екрану, потiм натисніть MENU</string>
 <string name="screenkb_custom_layout">Налаштування положення кнопок</string>
 <string name="screenkb_custom_layout_help">Провезiть по екрану, щоб додати кнопку, натисніть клавішу Меню, щоб скасувати останню кнопку</string>
+<string name="rightclick_key">Фізична кнопка</string>
 </resources>
