Renamed descriptions of some settings

--- a/project/java/translations/values-de/strings.xml
+++ b/project/java/translations/values-de/strings.xml
@@ -108,4 +108,5 @@
 <string name="screenkb_custom_layout">Passen Sie auf dem Bildschirm Tastatur-Layout</string>
 <string name="screenkb_custom_layout_help">Slide-Bildschirm hinzufügen Taste, drücken Sie Menü zum letzten Knopf rückgängig machen</string>
 <string name="rightclick_key">Physikalische Schlüssel</string>
+<string name="pointandclick_showcreenunderfinger2">On-Screen-Lupe</string>
 </resources>
