--- a/project/java/translations/values-fi/strings.xml
+++ b/project/java/translations/values-fi/strings.xml
@@ -108,4 +108,5 @@
 <string name="screenkb_custom_layout">Mukauta-ruudun näppäimistö</string>
 <string name="screenkb_custom_layout_help">Työnnä näytön lisätä painikkeen, paina Menu kumota viimeksi painike</string>
 <string name="rightclick_key">Fyysinen avain</string>
+<string name="pointandclick_showcreenunderfinger2">Näytöllä suurennuslasi</string>
 </resources>
