--- a/project/java/translations/values-uk/strings.xml
+++ b/project/java/translations/values-uk/strings.xml
@@ -101,4 +101,5 @@
 <string name="screenkb_custom_layout">Налаштування положення кнопок</string>
 <string name="screenkb_custom_layout_help">Провезiть по екрану, щоб додати кнопку, натисніть клавішу Меню, щоб скасувати останню кнопку</string>
 <string name="rightclick_key">Фізична кнопка</string>
+<string name="pointandclick_showcreenunderfinger2">Наекранна лупа</string>
 </resources>
