--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -111,4 +111,5 @@
 <string name="screenkb_custom_layout">Personnalisation de la présentation du clavier à l\u0026#39;écran</string>
 <string name="screenkb_custom_layout_help">Faites glisser l\u0026#39;écran pour ajouter le bouton, appuyez sur Menu pour annuler le dernier bouton</string>
 <string name="rightclick_key">Physique clés</string>
+<string name="pointandclick_showcreenunderfinger2">Sur l\u0026#39;écran loupe</string>
 </resources>
