--- a/project/java/translations/values-ru/strings.xml
+++ b/project/java/translations/values-ru/strings.xml
@@ -101,4 +101,5 @@
 <string name="screenkb_custom_layout">Настройка расположения кнопок</string>
 <string name="screenkb_custom_layout_help">Провезите по экрану, чтобы добавить кнопку, нажмите клавишу Меню, чтобы отменить последнюю кнопку</string>
 <string name="rightclick_key">Физическая кнопка</string>
+<string name="pointandclick_showcreenunderfinger2">Наэкранная лупа</string>
 </resources>
