--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="pointandclick_question">Advanced features</string>
     <string name="pointandclick_keepaspectratio">Keep 4:3 screen aspect ratio</string>
     <string name="pointandclick_showcreenunderfinger">Show screen under finger in separate window</string>
+    <string name="pointandclick_showcreenunderfinger2">On-screen magnifying glass</string>
     <string name="pointandclick_joystickmouse">Move mouse with joystick or trackball</string>
     <string name="pointandclick_joystickmousespeed">Move mouse with joystick speed</string>
     <string name="pointandclick_joystickmouseaccel">Move mouse with joystick acceleration</string>
