--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -112,4 +112,6 @@
 <string name="screenkb_custom_layout_help">Faites glisser l\u0026#39;écran pour ajouter le bouton, appuyez sur Menu pour annuler le dernier bouton</string>
 <string name="rightclick_key">Physique clés</string>
 <string name="pointandclick_showcreenunderfinger2">Sur l\u0026#39;écran loupe</string>
+<string name="video">Paramètres vidéo</string>
+<string name="video_smooth">Smooth la vidéo</string>
 </resources>
