--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -124,4 +124,7 @@
     <string name="calibrate_touchscreen">Calibrate touchscreen</string>
     <string name="calibrate_touchscreen_touch">Touch all four edges of the screen, press Menu when done</string>
 
+    <string name="video">Video settings</string>
+    <string name="video_smooth">Smooth the video</string>
+
 </resources>
