--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,8 @@ Bugs to fix
 
 - Right click by longpress.
 
+- Option for touch screen to act like laptop touchpad.
+
 - Calling SDL_SetVideoMode() with SDL 1.3 several times makes it crash.
 
 - Support for NDK r5b, when it's released.
