--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -114,4 +114,17 @@
 <string name="pointandclick_showcreenunderfinger2">Sur l\u0026#39;écran loupe</string>
 <string name="video">Paramètres vidéo</string>
 <string name="video_smooth">Smooth la vidéo</string>
+<string name="accel_veryslow">Très lent</string>
+<string name="leftclick_timeout">Tenir au même endroit</string>
+<string name="leftclick_tap">Appuyez sur</string>
+<string name="leftclick_tap_or_timeout">Appuyez sur ou maintenez</string>
+<string name="leftclick_timeout_time">timeout Holding</string>
+<string name="leftclick_timeout_time_0">0,3 s</string>
+<string name="leftclick_timeout_time_1">0,5 sec</string>
+<string name="leftclick_timeout_time_2">0,7 sec</string>
+<string name="leftclick_timeout_time_3">1 sec</string>
+<string name="leftclick_timeout_time_4">1,5 sec</string>
+<string name="pointandclick_relative">mouvement de la souris relative (mode portable)</string>
+<string name="pointandclick_relative_speed">Relative vitesse de déplacement de la souris</string>
+<string name="pointandclick_relative_accel">Relative accélération du mouvement de la souris</string>
 </resources>
