--- a/project/java/translations/values-uk/strings.xml
+++ b/project/java/translations/values-uk/strings.xml
@@ -104,4 +104,17 @@
 <string name="pointandclick_showcreenunderfinger2">Наекранна лупа</string>
 <string name="video">Налаштування відео</string>
 <string name="video_smooth">Згладити відео</string>
+<string name="accel_veryslow">Дуже повільно</string>
+<string name="leftclick_timeout">Натискання з затримкою</string>
+<string name="leftclick_tap">Швидке натискання</string>
+<string name="leftclick_tap_or_timeout">Швидке натискання або з затримкою</string>
+<string name="leftclick_timeout_time">Час натискання</string>
+<string name="leftclick_timeout_time_0">0,3 сек</string>
+<string name="leftclick_timeout_time_1">0,5 сек</string>
+<string name="leftclick_timeout_time_2">0,7 секунд</string>
+<string name="leftclick_timeout_time_3">1 сек</string>
+<string name="leftclick_timeout_time_4">1,5 сек</string>
+<string name="pointandclick_relative">Відносний рух миші (режим ноутбука)</string>
+<string name="pointandclick_relative_speed">Швидкість руху миші</string>
+<string name="pointandclick_relative_accel">Прискорення руху миші</string>
 </resources>
