Updated readme, small bugfix

--- a/todo.txt
+++ b/todo.txt
@@ -11,10 +11,6 @@ Bugs to fix
 
 - Show/hide screen controls with longpress on Text Edit button.
 
-- With 4:3 screen aspect ratio the on-screen buttons are not shown on the inactive part of screen.
-
-- Calling SDL_SetVideoMode() with SDL 1.3 several times makes it crash.
-
-- Support of libjnigraphics (it will disable on-screen keyboard)
+- Support of libjnigraphics (it will disable on-screen keyboard, only SW SDL screen surface supported)
 
 And that's all, I won't be doing any more development or fix other bugs (see bugs.txt for details).
