--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -135,4 +135,5 @@
 <string name="display_size_large">Large (tablet)</string>
 <string name="display_size_small">Petit (téléphone)</string>
 <string name="display_size_tiny">Très petit (Xperia Mini)</string>
+<string name="show_more_options">Afficher plus d\u0026#39;options</string>
 </resources>
