--- a/project/java/translations/values-ru/strings.xml
+++ b/project/java/translations/values-ru/strings.xml
@@ -128,4 +128,5 @@
 <string name="show_more_options">Показать больше параметров</string>
 <string name="broken_libc_title">Обнаружена бракованная прошивка</string>
 <string name="broken_libc_text">Ваше устройство содержит дефективные системные библиотеки, данное приложение скорее всего не будет работать. Пожалуйста, установите обновление, либо установите неофициальную прошивку, либо скопируйте /system/lib/libc.so с другого устройства (только для специалистов!)</string>
+<string name="controls_screenkb_drawsize">Размер изображения кнопок</string>
 </resources>
