--- a/project/java/translations/values-fi/strings.xml
+++ b/project/java/translations/values-fi/strings.xml
@@ -133,4 +133,5 @@
 <string name="display_size_small">Pieni (puhelin)</string>
 <string name="display_size_tiny">Tiny (Xperia Mini)</string>
 <string name="show_more_options">Näytä enemmän vaihtoehtoja</string>
+<string name="controls_screenkb_drawsize">Koko painike kuvia</string>
 </resources>
